# batmods-lite

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/linters/: .codespellrc  .flake8
.github/workflows/: ci.yaml  ci.yml  codecov.yml  release.yml
bmlite/: __init__.py  math.py  mesh.py
bmlite/P2D/: __init__.py  builder.py  dae.py  domains.py  postutils.py  roots.py
bmlite/P2D/default_exps/: constant_power.yaml
bmlite/P2D/default_sims/: default_P2D.yaml  graphite_nmc532.yaml
bmlite/P2D/solutions/: __init__.py  _base_solution.py  _cc_solution.py  _cp_solution.py  _cv_solution.py
bmlite/SPM/: __init__.py  builder.py  dae.py  domains.py  postutils.py  roots.py
bmlite/SPM/default_sims/: default_SPM.yaml  graphite_nmc532.yaml
bmlite/SPM/solutions/: __init__.py  _base_solution.py  _cc_solution.py  _cp_solution.py  _cv_solution.py
bmlite/docs/jupyter_execute/examples/: P2D_constant_current.ipynb  P2D_templates.ipynb
bmlite/docs/source/: conf.py  index.rst
bmlite/docs/source/_static/: custom.css
bmlite/docs/source/examples/: P2D_constant_current.ipynb  P2D_templates.ipynb  SPM_constant_current.ipynb  index.rst
bmlite/materials/: __init__.py  _gen2_electrolyte.py  _graphite_fast.py  _graphite_slow.py  _graphite_slow_extrap.py  _nmc_532_fast.py  _nmc_532_slow.py  _nmc_532_slow_extrap.py
bmlite/materials/data/: graphite_ocv.csv  nmc532_ocv.csv
bmlite/plotutils/: __init__.py
bmlite/tests/: test_bmlite_core.py  test_materials.py  test_p2d_cc.py  test_spm_cc.py
docs/: site.bat
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/api/: index.doctree
docs/_build/.doctrees/examples/: P2D_constant_current.doctree  P2D_constant_power.doctree  P2D_constant_voltage.doctree  P2D_parallel_simulations.doctree  P2D_roots.doctree  P2D_templates.doctree  SPM_constant_current.doctree  SPM_constant_power.doctree  SPM_constant_voltage.doctree  SPM_parallel_simulations.doctree  (+3 more)
docs/_build/_modules/: bmlite.html  index.html
docs/_build/_static/: custom.css
docs/_build/api/: index.html
docs/_build/examples/: P2D_constant_current.html  P2D_constant_power.html  P2D_constant_voltage.html  P2D_parallel_simulations.html  P2D_roots.html  P2D_templates.html  SPM_constant_current.html  SPM_constant_power.html  SPM_constant_voltage.html  SPM_parallel_simulations.html  SPM_roots.html  SPM_templates.html  index.html
docs/_source/: conf.py  index.rst
docs/_source/_templates/: search-field-2.html  search-field.html  search.html
docs/_source/api/: index.rst
docs/_source/examples/: P2D_constant_voltage.ipynb  P2D_parallel_simulations.ipynb  P2D_templates.ipynb  SPM_constant_current.ipynb  SPM_constant_power.ipynb  SPM_constant_voltage.ipynb  SPM_parallel_simulations.ipynb  SPM_roots.ipynb  SPM_templates.ipynb
docs/jupyter_execute/examples/: P2D_constant_current.ipynb  P2D_constant_power.ipynb  P2D_constant_voltage.ipynb  P2D_parallel_simulations.ipynb  P2D_roots.ipynb  P2D_templates.ipynb  P2D_tutorial.ipynb  SPM_constant_current.ipynb  SPM_constant_power.ipynb  SPM_constant_voltage.ipynb  SPM_parallel_simulations.ipynb  SPM_roots.ipynb  SPM_templates.ipynb  SPM_tutorial.ipynb
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css  switcher.json
docs/source/_templates/: navbar-logo.html
docs/source/api/: index.rst
docs/source/development/: code_of_conduct.rst  development_environments.rst  index.html  index.rst  issues_and_features.rst  patterns_and_conventions.rst  project_layout.rst  project_overview.rst  review_process.rst  tests_and_coverage.rst  version_control.rst
docs/source/examples/: P2D_constant_current.ipynb  P2D_constant_power.ipynb  P2D_constant_voltage.ipynb  P2D_roots.ipynb  P2D_templates.ipynb  P2D_tutorial.ipynb  SPM_constant_current.ipynb  SPM_constant_power.ipynb  SPM_constant_voltage.ipynb  SPM_parallel_simulations.ipynb  SPM_roots.ipynb  SPM_templates.ipynb  SPM_tutorial.ipynb  index.rst
docs/source/user_guide/: index.rst
memory_prof_rep/: README.md  extra_requirements.txt  main_p2d.py  plot_prof.py  prof.sh
memory_prof_rep/data_p2d_discharge_highdim1/: parameter_list.txt  solution_list.txt
memory_prof_rep/data_p2d_discharge_highdim2/: parameter_list.txt  solution_list.txt
memory_prof_rep/data_p2d_discharge_highdim3/: parameter_list.txt  solution_list.txt
memory_prof_rep/data_p2d_discharge_highdim4/: parameter_list.txt  solution_list.txt
memory_prof_rep/data_spm_discharge_highdim/: parameter_list.txt  sols.pkl  solution_list.txt
memory_prof_rep/default_exp/: p2d_discharge_highdim.yaml
memory_prof_rep/util/: sim_setup.py  sol_gen.py
scripts/: version_checker.py
src/bmlite/: __init__.py  _utils.py  math.py  mathutils.py  mesh.py
src/bmlite/P2D/: __init__.py  _simulation.py  _solutions.py  _templates.py  dae.py  domains.py  options.py  postutils.py  roots.py  submodels.py
src/bmlite/SPM/: __init__.py  _simulation.py  _solutions.py  _templates.py  dae.py  domains.py  postutils.py  roots.py  submodels.py
src/bmlite/_core/: __init__.py  _constants.py  _experiment.py  _idasolver.py  _templates.py
src/bmlite/materials/: __init__.py  _gen2_electrolyte.py  _graphite.py  _graphite_SiOx.py  _graphite_fast.py  _graphite_slow.py  _graphite_slow_extrap.py  _lfp.py  _nmc_532.py  _nmc_532_fast.py  _nmc_532_slow.py  _nmc_532_slow_extrap.py  _nmc_811.py
src/bmlite/plotutils/: __init__.py
tests/: test_bmlite_core.py  test_experiment.py  test_materials.py  test_math.py  test_mesh.py  test_p2d_basesolution.py  test_p2d_cc.py  test_p2d_core.py  test_p2d_cp.py  test_p2d_cv.py  test_p2d_exprs.py  test_p2d_solutions.py  test_spm_basesolution.py  test_spm_cc.py  test_spm_core.py  test_spm_cp.py  test_spm_cv.py  test_spm_exprs.py  test_spm_solutions.py  test_utils.py
tests/materials_data/: graphite_SiOx.npz  nmc811.npz
(+211 files in other folders)
