# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batmods-lite"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10,<3.15"
license = { file = "LICENSE" }
description = "Packaged battery models and material properties."
keywords = ["battery", "models", "lithium", "NMC", "LFP"]
authors = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
maintainers = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "tqdm",
    "numpy",
    "pandas",
    "openpyxl",
    "scipy",
    "matplotlib",
    "ruamel.yaml",
    "scikit-sundae>=1.1.0",
]

[tool.setuptools.dynamic]
version = { attr = "bmlite.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.csv"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-design",
    "sphinx-autoapi",
    "sphinx-favicon",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "nox",
    "flake8",
    "autopep8",
    "codespell",
    "genbadge[all]",
    "batmods-lite[docs,tests]",
]


[project.urls]
Homepage = "https://github.com/NatLabRockies/BATMODS-lite"
Documentation = "https://batmods-lite.readthedocs.io/"
Repository = "https://github.com/NatLabRockies/BATMODS-lite"
Issues = "https://github.com/NatLabRockies/BATMODS-lite/issues"
