[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "batmods-lite"
readme = "README.md"
dynamic = ["version"]
description = "Packaged battery models and material properties."
keywords = ["battery", "models", "lithium", "NMC", "LFP", "SPM", "P2D"]
requires-python = ">=3.10,<3.15"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
maintainers = [
    { name = "Corey R. Randall" },
    { email = "corey.r.randall@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "tqdm",
    "numpy",
    "scipy",
    "pandas",
    "openpyxl",
    "matplotlib",
    "ruamel.yaml",
    "scikit-sundae>=1.1.3",
]

[tool.setuptools.dynamic]
version = { attr = "bmlite.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.csv"]

[tool.ruff]
line-length = 80
exclude = ["build", "docs", "images", "reports", "references"]

[tool.ruff.lint]
preview = true
select = [
    "E",  # All pycodestyle errors
    "W",  # All pycodestyle warnings
    "F",  # All pyflakes errors
    "B",  # All flake8-bugbear checks
    "D",  # All pydocstyle checks
]
extend-select = [
    "E302", "E305",  # Expected blank lines (requires preview=true, above)
]
ignore = [
    "B007", "B009", "B010", "B028", "B905",
    "D1", "D203", "D205", "D212", "D400", "D401", "D415",
    "E201", "E202", "E226", "E241", "E731",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-design",
    "sphinx-autoapi",
    # "sphinx-favicon",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-html",
    "pytest-xdist",
]
dev = [
    "nox",
    "ruff",
    "codespell",
    "batmods-lite[docs,tests]",
]


[project.urls]
Homepage = "https://github.com/NatLabRockies/batmods-lite"
Documentation = "https://batmods-lite.readthedocs.io/"
Repository = "https://github.com/NatLabRockies/batmods-lite"
Issues = "https://github.com/NatLabRockies/batmods-lite/issues"
